# container-id-ocr

./: .gitignore  README.md  pyproject.toml
src/: config.py  labels.txt  main.py  util.py
src/steps/: detection.py  ocr.py
